# telegram_itilium_bot

./: .env.example  .gitignore  Readme.md  docker-compose.yaml  docker-compose_prod.yaml  docker.env.example
src/: .gitignore  app.py  pyproject.toml  requirements.txt  requirements_dev.txt
src/alembic/: env.py
src/api/: dto_api.py  itilium_api.py  urls.py
src/bot_enums/: admin_enums.py  user_enums.py
src/common/: bot_cmds_list.py
src/config/: configuration.py
src/database/: base.py  db.py  orm_query_command.py  orm_query_user.py  session_db_manager.py
src/database/models/: models.py
src/dialogs/: __init__.py
src/dialogs/bot_menu/: __init__.py  calendar_states.py  calendar_widgets.py  calendar_windows.py  getters.py  keyboards.py  selected.py  states.py  windows.py
src/dialogs/registration/: __init__.py  getters.py  handlers.py  states.py  windows.py
src/dto/: paginate_marketing_subdivisions_dto.py  paginate_scs_dto.py  paginate_scs_responsible_dto.py  paginate_teams_dto.py
src/filters/: chat_types.py
src/fsm/: marketing_fsm.py  user_fsm.py
src/handlers/: admin_private.py  group_handler.py  new_user_handler.py  user_private.py
src/kbds/: reply.py  user_kbds.py
src/middleware/: db_middleware.py  user_access_middleware.py
src/services/: bot_user.py  current_bot_users.py  user_private_service.py
src/sheduler/: scheduler_tasks.py
src/utils/: README_message_templates.md  cache_manager.py  db_redis.py  error_handler.py  helpers.py  http_client.py  logger_project.py  message_templates.py  path_conf.py  time_utils.py
(+4 files in other folders)
