[tool.poetry]
name = "telegrambotrk"
version = "1.0.0"
description = "telegram bot for searching for"
authors = ["Ckala62rus <agr.akyla@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.3.0"
apscheduler = "3.10.4"
sqlalchemy = "2.0.25"
python-dotenv = "1.0.0"
psycopg = "3.1.17"
psycopg-binary = "3.1.17"
httpx = "^0.27.2"
alembic = "1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
